# FREEAI

./: .gitignore  README.md  TESTING.md  plan.md  pyproject.toml
freecode/: agent.py  assistance.py  clear.py  commands.py  config.py  defaults.py  history.py  intent.py  main.py  model_manager.py  ollama_client.py  parser.py  planner.py  rag.py  responsive.py  setup_models.py  skills.py  test_setup_models.py  ui.py
freecode/tools/: browser_tool.py  compress.py  file_tools.py  git_tool.py  shell_tool.py  web_tool.py
tests/: test_agent.py  test_agent_cascade.py  test_commands.py  test_ui_flex.py
