[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "freecode"
version = "0.1.0"
description = "freeai: a local AI coding assistant powered by Ollama."
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "httpx",
    "ddgs",
    "beautifulsoup4",
    "gitpython",
    "chromadb",
    "prompt_toolkit",
]

[project.scripts]
freeai = "freecode.main:app"

[tool.setuptools.packages.find]
include = ["freecode*"]
